--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "public/index.html",
   "scripts": {
     "postinstall": "copyfiles -f ./node_modules/d3/d3.min.js ./public/js/vendor/d3",
-    "start": "cd ./public; python -m SimpleHTTPServer 8000"
+    "start": "echo click to visit: http://127.0.0.1:7890/public/index.html) && python -m http.server 7890 --bind 127.0.0.1"
   },
   "repository": {
     "type": "git",
